--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "svg-url-loader": "^2.3.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
