Fix scaling and implement custom build scripts
Scaling did not work well on devices other than the development device.
Custom build scripts are needed to automate error-prone steps.

- Add LICENSE
- Add README.md
- Add description meta to docs/index.html
- Add viewport meta to docs/index.html
- Implement unsupported resolution notice to docs/index.html
- Remove "and contributors" from copyright declaration message
  in docs/index.html
- Change license attribute to "MIT" in package.json
- Move webpack build script to "build:webpack" in package.json
- Add build step for adding copyright and license declarations to
  app.js to "build:appjs" in package.json
- Add build step for updating the version attribute in package.json to
  match the values in the versioning library to "build:version"
  in package.json
- Aggregate all build steps to "build" in package.json
- Add scripts/build-appjs.js
- Add scripts/build-version.js
- Add copyright and license declaration headers to src/js/index.js
- Add copyright and license declaration headers to src/lib/lib.js
- Add copyright and license declaration headers to src/lib/nsd.js
- Add copyright and license declaration headers to src/lib/version.js
- Implement whitespace removal step to getPreRelease()
  in src/lib/version.js
- Implement whitespace removal step to getMeta() in src/lib/version.js
- Add copyright and license declaration headers
  to src/styles/_mixins.scss
- Add copyright and license declaration headers
  to src/styles/_params.scss
- Add unsupported resolution warning customization parameters
  to src/styles/_params.scss
- Add countdown box parameters to src/styles/_params.scss
- Add footer parameters to src/styles/_params.scss
- Add copyright and license declaration headers to src/styles/style.scss
- Implement unsupported resolution warning styles
  to src/styles/style.scss
- Implement scaling to src/styles/style.scss

--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "daystillgrad",
-  "version": "0.1.0",
+  "version": "v0.2.0-2019.4.20.d77fb6",
   "description": "",
   "private": true,
   "author": "GHIFARI160",
-  "license": "ISC",
+  "license": "MIT",
   "scripts": {
     "dev": "webpack --mode development --watch",
-    "build": "webpack --mode production"
+    "build:webpack": "webpack --mode production",
+    "build:appjs": "node scripts/build-appjs",
+    "build:version": "node scripts/build-version",
+    "build": "npm run build:webpack && npm run build:appjs && npm run build:version"
   },
   "devDependencies": {
     "css-loader": "^2.1.1",
