Add changelog viewer and links to roadmap and feedback Google Form
A changelog viewer is long overdue for this project. Links to the
roadmap and the feedback Google Form had been planned for quite some
time.

- Force node-sass implementation of sass-loader in webpack.config.js
- Add raw-loader for CHANGELOG in webpack.config.js
- Add external URIs generation and replacement library
  in src/lib/external-uris.js
- Add hyphens mixins to src/styles/_mixins.scss
- Rename modal to modal-warning and modal-wrapper to
  modal-warning-wrapper in src/styles/_params.scss
- Add modal and modal-wrapper parameters for the changelog viewer
  in src/styles/_params.scss
- Rename modal to modal-warning and modal-wrapper to
  modal-warning-wrapper in src/styles/style.scss
- Implement the changelog viewer with modal and modal-wrapper classes
  in src/styles/style.scss
- Add CHANGELOG based on Keep a Changelog v1.0.0, slightly modified for
  UI rendering purposes
- Rename modal to modal-warning and modal-wrapper to
  modal-warning-wrapper in docs/index.html
- Add links subsection to the footer in docs/index.html
- Add link to the changelog viewer in docs/index.html
- Add roadmap, feedback form, and source code pseudo-links
  in docs/index.html
- Modify scripts/build-version.js to modify the version attribute
  in package-lock.json to match the values provided in the versioning
  library
- Implement external pseudo-links to actual link convertion/generation
  algorithm to src/js/index.js
- Implement the changelog viewer in src/js/index.js
- Update development and building environment dependencies (webpack
  and webpack-cli) in package-lock.json
- Add raw-loader as a development and building environment dependency
  in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "daystillgrad",
-  "version": "v0.2.0-2019.4.20.d77fb6",
-  "description": "",
+  "version": "v0.2.0-2019.4.21.8dae2e",
+  "description": "Countdown until graduation for Maine West High School Class of 2019",
   "private": true,
   "author": "GHIFARI160",
   "license": "MIT",
@@ -15,10 +15,11 @@
   "devDependencies": {
     "css-loader": "^2.1.1",
     "node-sass": "^4.11.0",
+    "raw-loader": "^2.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "svg-url-loader": "^2.3.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1"
   }
 }
