--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daystillgrad",
-  "version": "v0.2.0-2019.4.21.8dae2e",
+  "version": "v0.2.0-2019.4.21.24c64d",
   "description": "Countdown until graduation for Maine West High School Class of 2019",
   "private": true,
   "author": "GHIFARI160",
