Implement new version notice and modify school days countdown
New version notice will now be displayed if the app is loaded with the
GET parameters of `nvd=true`. The school days countdown now accounts for
the end of a normal school day (3:20 PM).

- Change "End of " with "End" in the gtag.js area in docs/index.html
- Modify the version build script to write the current version
  into docs/VERSION in scripts/build-version.js
- Implement modal helper functions in src/js/index.js
- Optimize replaceExternalURIs() by moving it into within onload()
  in src/js/index.js
- Implement modal display for the new version notice in src/js/index.js
- Optimize all DOM calls in src/js/index.js
- Implement issue tracker URI replacement in src/lib/external-uris.js
- Modify the school days until graduation calculation algorithm to
  account for the end of a normal school day in src/lib/lib.js
- Add modal links styles in src/styles/style.scss
- Optimize modal styles in src/styles/style.scss
- Add modal links style parameters in src/styles/_params.scss

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daystillgrad",
-  "version": "v0.2.0-2019.4.21.24c64d",
+  "version": "v0.2.0-2019.4.23.f01cdf",
   "description": "Countdown until graduation for Maine West High School Class of 2019",
   "private": true,
   "author": "GHIFARI160",
