--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daystillgrad",
-  "version": "v0.2.0-2019.4.23.f01cdf",
+  "version": "v0.2.0-2019.4.23.62b18e",
   "description": "Countdown until graduation for Maine West High School Class of 2019",
   "private": true,
   "author": "GHIFARI160",
