Implement dev server
We don't need to use a full blown Apache and PHP56 stack running on
Docker for this project. Running Docker is battery-draining so there is
no reason to do it for a static web app.

- Implement dev server in dev/server
- Change `dev` to `dev:webpack` npm script in package.json
- Add `dev:server` npm script in package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "GHIFARI160",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack --mode development --watch",
+    "dev:webpack": "webpack --mode development --watch",
+    "dev:server": "node dev/server",
     "build:webpack": "webpack --mode production",
     "build:appjs": "node scripts/build-appjs",
     "build:version": "node scripts/build-version",
