--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daystillgrad",
-  "version": "v0.2.0",
+  "version": "v0.3.0-2019.5.7.8a75be+dev",
   "description": "Countdown until graduation for Maine West High School Class of 2019",
   "private": true,
   "author": "GHIFARI160",
